Final commits-first try

--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/submetu/Gulp-Build#readme",
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^3.0.3",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0"
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-webserver": "^0.9.1"
   }
 }
